# tame_of_thrones

./: README.md  setup.cfg  setup.py
tame_of_thrones/: geektrust.py  rule_universe.py  seasar_cipher.py  tame_of_thrones_1.txt
tame_of_thrones.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
